// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label range Can add options to the label range component 1`] = `
<div>
  <div
    class="o-section o-data-labels"
  >
    <div
      class="o-section-title"
    >
      Categories / Labels
      
      
    </div>
    
    <div
      class="o-selection w-100"
    >
      <div
        class="o-selection-input"
      >
        <div
          class="d-flex"
        >
          
          <div
            class="position-relative w-100"
          >
            <input
              class="o-input mb-2"
              placeholder="e.g. A1:A2"
              spellcheck="false"
              style=""
              type="text"
            />
            
            
          </div>
          <div
            class="ms-2 d-flex align-items-center"
          >
            
            
          </div>
        </div>
        <div />
      </div>
      
      
      <div
        class="d-flex flex-row w-100 o-selection-input"
      >
        
        
      </div>
    </div>
    <label
      class="o-checkbox d-flex align-items-center mt-2"
      role="button"
    >
      <input
        class="me-2"
        name="my_option"
        type="checkbox"
      />
      My option
      
    </label>
    
    
  </div>
</div>
`;

exports[`Label range Can render a label range component 1`] = `
<div>
  <div
    class="o-section o-data-labels"
  >
    <div
      class="o-section-title"
    >
      Categories / Labels
      
      
    </div>
    
    <div
      class="o-selection w-100"
    >
      <div
        class="o-selection-input"
      >
        <div
          class="d-flex"
        >
          
          <div
            class="position-relative w-100"
          >
            <input
              class="o-input mb-2"
              placeholder="e.g. A1:A2"
              spellcheck="false"
              style=""
              type="text"
            />
            
            
          </div>
          <div
            class="ms-2 d-flex align-items-center"
          >
            
            
          </div>
        </div>
        <div />
      </div>
      
      
      <div
        class="d-flex flex-row w-100 o-selection-input"
      >
        
        
      </div>
    </div>
    
    
  </div>
</div>
`;
